CSS fixes. * demo page buttons now have proper spacing * footer logo now aligns with left gutter

--- a/website/proveit_styles.css
+++ b/website/proveit_styles.css
@@ -451,6 +451,7 @@ table#footer {
 
 td#footerLogo {
 	width: 150px;
+	padding-left: 10px;
 	}
 	
 td#footerNav {
